fix spacing in integrations section

--- a/orcid-web/src/main/webapp/static/css/orcid.new.css
+++ b/orcid-web/src/main/webapp/static/css/orcid.new.css
@@ -6592,7 +6592,7 @@ a:hover .mozilla-badge{
 
 .member-list ul{
 	padding: 0;
-	margin: 0 0 10px 0;
+	margin: 0 0 16px 0;
 }
 
 .member-list a{
